# coverletter.ai

./: .gitignore  Dockerfile  README.md  coverletter.erd  create_service_account.py  create_venv.sh  dev-requirements.txt  docker-compose.yaml  pyproject.toml  requirements.txt  test.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
app/: main.py
app/src/: data_models.py
assets/: coverletter.erd
migrations/versions/: 2e7b05bd539d_added_new_fields_to_job_postings.py  6e7dde46b210_new_fields_in_user_model.py  8655e2ee3de0_coverletter_vanilla_table.py  e9ba5e7a5ed0_.py
src/: data_models.py  main.py
src/coverletter/: __init__.py  auth.py  config.py  db.py  db_models.py  routes.py  test.py
src/coverletter/templates/: base.html
src/coverletter/templates/applications/: create_letter.html
src/coverletter/templates/auth/: login.html  register.html
src/coverletter/templates/profile/: _resume_category.html  edit_profile.html  resume_category.html  user.html
src/coverletter/templates/resume/: add_resume.html  add_resume_item.html
src/coverletter/views/: __init__.py  applications.py  auth.py  coverletters.py  errors.py  profile.py  quiz.py  resume.py  routes.py
tests/: init_database.py  test_db_models.py
